deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo-app-service
spec:
  selector:
    app: cicd-demo-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
  externalIPs:
    - 10.0.0.110
